# TriD-Chess

./: AttackBoard.cpp  AttackBoard.h  Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  ChessPiece.cpp  ChessPiece.h  Colours.h  Direction.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  LICENSE  Location.h  Pawn.cpp  Pawn.h  Position.cpp  Position.h  Position3D.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Side.h  StableBoard.cpp  StableBoard.h  main.cpp
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.h
Classes/TriD-Chess/: AttackBoard.cpp  AttackBoard.h  Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  ChessPiece.cpp  ChessPiece.h  Colours.h  Direction.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  LICENSE  Location.h  Pawn.cpp  Pawn.h  Position.cpp  Position.h  Position3D.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Side.h  StableBoard.cpp  StableBoard.h  TriDChess.sln  TriDChess.vcxproj  TriDChess.vcxproj.filters  main.cpp
Resources/: 3d-model.c3b  3d-model.c3t  4x4obj.mtl  chess.c3b  chessboard1.c3b  chessboard1.c3t  chessboard1.mtl  out.c3t  pawn.mtl  untitled.mtl
include/: Box.cpp  Box.h  OpenGLCommon.h
proj.win32/: MyGame.VC.VC.opendb  MyGame.vcxproj  TriDChess.sln
